--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.5",
     "@supabase/auth-helpers-nextjs": "^0.8.7",
     "@supabase/supabase-js": "^2.39.2",
     "@tanstack/react-query": "^5.17.1",
@@ -26,6 +27,7 @@
     "eslint": "8.34.0",
     "eslint-config-next": "13.2.1",
     "framer-motion": "^10.17.4",
+    "linkedin-api-client": "^0.3.0",
     "lucide-react": "^0.303.0",
     "next": "13.2.1",
     "react": "18.2.0",
@@ -33,6 +35,7 @@
     "react-hook-form": "^7.49.2",
     "react-icons": "^4.12.0",
     "react-intersection-observer": "^9.5.3",
+    "react-loader-spinner": "^6.1.6",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
     "typewriter-effect": "^2.21.0",
